@@ -242,10 +242,8 @@ WV_MENU_MLKRT,
 WV_MENU_MLKOFF,
 WV_MENU_VSG,
 WV_MENU_SEP9,
-#if !defined _MSC_VER && !defined __MINGW32__
 WV_MENU_VSMO,
 WV_MENU_SEP9A,
-#endif
 WV_MENU_VSBS,
 WV_MENU_SEP10,
 WV_MENU_VDR,
